--- a/src/index.css
+++ b/src/index.css
@@ -298,3 +298,23 @@ body {
   {
   background-color: #84cfc7 !important; 
 }
+
+.badge{
+  cursor: pointer;
+  transition: .2s;
+}
+.badge:hover{
+  transform: scale(1.2);
+}
+
+.custom-carousel-item {
+  max-height: 500px; 
+}
+.custom-carousel-item img{
+  height: 100%;
+  object-fit: contain;
+}
+
+.carousel-indicators [data-bs-target]{
+  background-color: #84cfc7 !important;
+}
