--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@ body {
   font-family: "League Spartan", sans-serif;
   background-color: #dff5f8;
   color: rgba(255, 255, 255, 0.225);
-  overflow-x: hidden; 
-  overflow-y: auto; 
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 #elipse1,
@@ -125,33 +125,32 @@ body {
   animation-delay: 0s;
 }
 
-
-.pawContainer{
+.pawContainer {
   margin-left: 30px;
   top: -50px;
   position: relative;
 }
-.pawContainer2{
+.pawContainer2 {
   margin-left: 165px;
   top: 15px;
   position: relative;
 }
 
-
-.infoContainer{
+.infoContainer {
   position: relative;
   margin-top: 40rem;
 }
 
-.card{
+.card {
   border: none !important;
   border-radius: 0;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
   padding-left: 0;
   padding-right: 0;
 }
 
-.carousel{
+.carousel {
   padding: 40px;
 }
 
@@ -159,7 +158,7 @@ body {
   width: 60%;
 }
 
-.testimonial-content  img{
+.testimonial-content img {
   width: 80%;
   border-radius: 50%;
   min-width: 120px;
@@ -177,7 +176,7 @@ body {
   justify-content: space-between;
 }
 
-.slide_direction:hover{
+.slide_direction:hover {
   background-color: #cbd3d4;
 }
 
@@ -201,13 +200,13 @@ body {
   height: 50px;
   width: 50px;
   cursor: pointer;
-  transition: .2s;
+  transition: 0.2s;
 }
 
 .left:hover,
 .right:hover {
   background-color: #add6e0;
-} 
+}
 
 .left {
   left: 20%;
@@ -229,18 +228,18 @@ body {
   visibility: visible !important;
 }
 
-.banner img{
+.banner img {
   width: 40%;
 }
 
-.banner div{
+.banner div {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 50px;
 }
 
-.volunteer{
+.volunteer {
   background-image: url("./assets/img/Rectangle 1.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -251,12 +250,12 @@ body {
 }
 
 .half-height {
-  height: calc((100% - 1rem) / 2); 
+  height: calc((100% - 1rem) / 2);
 }
 
 .custom-pagination .page-item .page-link {
   border-radius: 50%;
-  margin: 0 5px; 
+  margin: 0 5px;
 }
 
 .custom-pagination .page-item.active .page-link {
@@ -282,39 +281,170 @@ body {
   padding: 0.5rem 0.75rem;
 }
 
-
-.step{
+.step {
   font-size: 50px;
 }
 
-.StepButton-d2-0-2-8.active, 
+.StepButton-d2-0-2-8.active,
 .StepButton-d2-0-2-8.completed,
 .StepButton-d6-0-2-12.active,
 .StepButton-d6-0-2-12.completed,
 .StepButton-d10-0-2-22.active,
 .StepButton-d6-0-2-18.completed,
 .StepButton-d10-0-2-32.active,
-.StepButton-d6-0-2-18.active   
-  {
-  background-color: #84cfc7 !important; 
+.StepButton-d6-0-2-18.active {
+  background-color: #84cfc7 !important;
 }
 
-.badge{
+.badge {
   cursor: pointer;
-  transition: .2s;
+  transition: 0.2s;
 }
-.badge:hover{
+.badge:hover {
   transform: scale(1.2);
 }
 
 .custom-carousel-item {
-  max-height: 500px; 
+  max-height: 500px;
 }
-.custom-carousel-item img{
+.custom-carousel-item img {
   height: 100%;
   object-fit: contain;
 }
 
-.carousel-indicators [data-bs-target]{
+.carousel-indicators [data-bs-target] {
   background-color: #84cfc7 !important;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.grid-item {
+  position: relative;
+  overflow: hidden;
+}
+
+.grid-item img {
+  width: 100%;
+  height: -webkit-fill-available;
+  transition: opacity 0.3s ease;
+}
+
+.grid-item .title{
+  position: absolute;
+  color: #fff;
+  visibility: hidden;
+  top: 20px;
+  left: 20px;
+}
+
+.grid-item:hover .title {
+  opacity: 1;
+  visibility: visible;
+  animation: slideInDown 0.5s;
+  cursor: pointer;
+}
+
+.grid-item::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  cursor: pointer;
+}
+
+.grid-item::after {
+  content: attr(data-text);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 1.5em;
+  opacity: 0;
+  transition: opacity 0.3s ease-in;
+}
+
+.grid-item:hover img {
+  opacity: 5.7;
+}
+
+.grid-item:hover::before {
+  opacity: 1;
+}
+
+.grid-item:hover::after {
+  opacity: 1;
+}
+
+.grid-item:nth-child(6) {
+  grid-column: 2;
+  grid-row: 1 / span 2;
+}
+
+.grid-item:nth-child(8) {
+  grid-row: 3 / span 2;
+}
+
+.grid-item:nth-child(9) {
+  grid-row-start: 3;
+  grid-column-start: 2;
+}
+
+.grid-item:nth-child(10) {
+  grid-column-start: 3;
+  grid-row: 2 / span 2;
+}
+.grid-item:nth-child(11) {
+  grid-column-start: 2;
+  grid-row: 4;
+}
+.grid-item:nth-child(7) {
+  grid-column-start: 4;
+  grid-row: 2;
+}
+.grid-item:nth-child(12) {
+  grid-row: 3 / span 2;
+}
+
+@media (max-width: 768px) {
+  .grid-item:nth-child(1) {
+    grid-column: 1 / span 2;
+  }
+  .grid-item:nth-child(6) {
+    grid-column: 3 / span 2;
+    grid-row: 1 / span 2;
+  }
+
+  .grid-item:nth-child(8) {
+    grid-column: 1 / span 2;
+    grid-row: 2 / span 2;
+  }
+  .grid-item:nth-child(9) {
+    grid-row-start: 3;
+    grid-column-start: 3;
+  }
+  .grid-item:nth-child(10) {
+    grid-row: 4 / span 2;
+  }
+  .grid-item:nth-child(12) {
+    grid-row: 4 / span 2;
+  }
+  .grid-item:nth-child(2) {
+    grid-column: 1 / span 2;
+    grid-row-start: 6;
+  }
+  .grid-item:nth-child(2) {
+    grid-column: 1 / span 4;
+  }
+  .grid-item:nth-child(7) {
+    grid-column: 4;
+    grid-row-start: 5;
+  }
 }
