--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,12 @@ body {
   width: 800px;
 }
 
+@media screen and (max-width: 990px) {
+  #heroDog, #elipse3, #elipse1, #elipse4, #elipse5 {
+    display: none;
+  }
+}
+
 #heroText h1 {
   font-size: 5rem;
   font-family: "Inter", sans-serif;
@@ -328,8 +334,7 @@ body {
   animation: fadeIn 0.5s ease-in-out forwards;
 }
 
-
-.flip-card{
+.flip-card {
   cursor: pointer;
 }
 
@@ -342,57 +347,125 @@ body {
   }
 }
 
-
 .counter h1 {
   font-size: 4em;
 }
 
-.circular-btn{
-  position:relative;
-  display:inline-block;
-  margin:20px;
+.circular-btn {
+  position: relative;
+  display: inline-block;
+  margin: 20px;
 }
-.circular-btn{
-  color:white;
-  font-weight:bold;
-  font-size:36px;
+.circular-btn {
+  color: white;
+  font-weight: bold;
+  font-size: 36px;
   text-align: center;
-  text-decoration:none;
-  background-color:#76cac1;
-  display:block;
-  position:relative;
-  padding:20px 40px;
-  
+  text-decoration: none;
+  background-color: #76cac1;
+  display: block;
+  position: relative;
+  padding: 20px 40px;
+
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   text-shadow: 0px 1px 0px #000;
   filter: dropshadow(color=#000, offx=0px, offy=0px);
-  
-  -webkit-box-shadow:inset 0 1px 0 #c4eeff, 0 10px 0 #259d85b6;
-  -moz-box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #028a6f;
-  box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #009476;
-  
+
+  -webkit-box-shadow: inset 0 1px 0 #c4eeff, 0 10px 0 #259d85b6;
+  -moz-box-shadow: inset 0 1px 0 #ffe5c4, 0 10px 0 #028a6f;
+  box-shadow: inset 0 1px 0 #ffe5c4, 0 10px 0 #009476;
+
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
 }
-.circular-btn:active{
-  top:10px;
-  background-color:#3fb8a0a8;
-  
-  -webkit-box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #259d85b6;
-  -moz-box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3pxpx 0 #028a6f;
-  box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #009476;
+.circular-btn:active {
+  top: 10px;
+  background-color: #3fb8a0a8;
+
+  -webkit-box-shadow: inset 0 1px 0 #ffe5c4, inset 0 -3px 0 #259d85b6;
+  -moz-box-shadow: inset 0 1px 0 #ffe5c4, inset 0 -3pxpx 0 #028a6f;
+  box-shadow: inset 0 1px 0 #ffe5c4, inset 0 -3px 0 #009476;
 }
 
-.circular-btn:after{
-  content:"";
-  height:100%;
-  width:100%;
-  padding:4px;
+.circular-btn:after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  padding: 4px;
   position: absolute;
-  bottom:-15px;
-  left:-4px;
-  z-index:-1;
+  bottom: -15px;
+  left: -4px;
+  z-index: -1;
+}
+
+.hero-canvas {
+  height: 80vh;
+  position: relative; /* Add position relative */
+}
+
+canvas {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.hero-canvas::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 1;
+}
+
+.hero-container {
+  position: relative;
+}
+
+.hero-titlee {
+  position: absolute;
+  left: 25%;
+  top: 30%;
+  width: 50%;
+  z-index: 2;
+  overflow: hidden; /* Add overflow: hidden */
+}
+
+.hero-container h1,
+.hero-container p {
+  color: #f0f0f0;
+  text-shadow: 3px 4px 7px rgba(41, 35, 16, 0.8);
+}
+
+.hero-container h1 {
+  font-size: 4em;
+}
+.hero-container p {
+  font-size: 1.5em;
+}
+
+@media (max-width: 768px) {
+  .hero-container h1 {
+    font-size: 3em; /* Adjust the font size for smaller screens */
+  }
+
+  .hero-container p {
+    font-size: 1.2em; /* Adjust the font size for smaller screens */
+  }
+}
+
+/* Media query for even smaller screens */
+@media (max-width: 576px) {
+  .hero-container h1 {
+    font-size: 2.5em; /* Adjust the font size for even smaller screens */
+  }
+
+  .hero-container p {
+    font-size: 1em; /* Adjust the font size for even smaller screens */
+  }
 }
 
 .animal-sounds-container {
@@ -405,19 +478,20 @@ body {
   max-height: 1000px; /* Set max height to a large value to reveal the contents */
 }
 
-.btnAnimation{
+.btnAnimation {
   font-size: 1.5rem;
   width: 100%;
   border-radius: 30px;
-  transition: .2s ease;
+  transition: 0.2s ease;
   border: transparent;
 }
 
-.btnAnimation:hover, .btnAnimation:active{
+.btnAnimation:hover,
+.btnAnimation:active {
   transform: translateY(-15px);
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
-
 
 .grid-container {
   display: grid;
