--- a/src/index.css
+++ b/src/index.css
@@ -493,6 +493,65 @@ canvas {
     rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
+.footer {
+  background:#76cac1;
+padding-bottom: 50px;
+padding-top: 80px;
+}
+.footer_menu {
+margin-bottom: 20px;
+}
+.footer_menu ul {
+list-style: none;
+text-align: center;
+}
+.footer_menu ul li{display: inline-block;}
+.footer_menu ul li a {
+color:#fff;
+padding: 0 10px;
+-webkit-transition: 0.3s;
+transition: 0.3s;
+}
+.footer_menu ul li a:hover{color:#0D9276;}
+
+.footer_profile{margin-bottom:40px;}
+.footer_profile ul{
+list-style: outside none none;
+margin: 0;
+padding: 0
+}
+.footer_profile ul li{
+display: inline-block;
+}
+@media only screen and (max-width:480px) { 
+.footer_profile ul li{margin:2px;}
+}
+.footer_profile ul li a img{width:60px;}
+
+.footer_profile ul li a {
+background: #0D9276;
+width: 40px;
+height: 40px;
+display: block;
+text-align: center;
+margin-right: 5px;
+border-radius: 50%;
+line-height: 40px;
+box-sizing: border-box;
+text-decoration: none;
+-webkit-transition: .3s;
+transition: .3s;
+color: #fff;
+}
+.footer_copyright {
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  color: #fff;
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
